# QTrecipe_catalog

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
